# Dice

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CNAME  CODE_OF_CONDUCT.md  CQP.lib  Dice.cppcheck  Dice.sln  Dice.sln.DotSettings  DiceAttrVar.cpp  HelpDoc.md  README.md  SDK_Debug.lib  appveyor.yml  com.w4123.dice.exp  vcpkg.json  用户协议.md
.github/: FUNDING.yml
.github/workflows/: cmake.yml  codacy-analysis.yml  codeql-analysis.yml
CQSDK/: BotEnvironment.h  CQAPI.h  CQAPI_EX.h  CQEVE.h  CQEVEBasic.h  CQEVEMsg.h  CQEVERequest.h  CQEVE_ALL.h  CQEVE_DiscussMsg.h  CQEVE_FriendAdd.h  CQEVE_GroupMsg.h  CQEVE_PrivateMsg.h  CQEVE_RequestAddFriend.h  CQEVE_RequestAddGroup.h  CQEVE_Status.h  CQLogger.h  CQMsgCode.h  CQMsgSend.h  CQTools.h  CQconstant.h  CQface.h  Unpack.h  bufstream.h
CQSDKCPP/: CQAPI.cpp  CQAPI_EX.cpp  CQEVE.cpp  CQTools.cpp  CQmsgcode.cpp  CQstream.cpp  Unpack.cpp  debug.cpp
CocXlsxTool/: CocXlsxTool.pro  icon.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  rapidxml_print.hpp  unzip.cpp
Dice/: APPINFO.h  BlackListManager.cpp  BlackListManager.h  BlackMark.hpp  CQP.lib  CQTools.cpp  CQTools.h  CardDeck.cpp  CardDeck.h  CharacterCard.cpp  CharacterCard.h  CustomMsg.cpp  CustomMsg.h  CustomMsg.json  Dice.cpp  Dice.vcxproj  Dice.vcxproj.filters  DiceAttrVar.cpp  DiceAttrVar.h  DiceCensor.cpp  DiceCensor.h  DiceCloud.cpp  DiceCloud.h  DiceConsole.cpp  DiceConsole.h  DiceEvent.cpp  DiceEvent.h  DiceExtensionManager.cpp  DiceExtensionManager.h  DiceFile.cpp  DiceFile.hpp  DiceFormatter.cpp  DiceFormatter.h  DiceGUI.cpp  DiceGUI.h  DiceGit.cpp  DiceGit.h  DiceJS.cpp  DiceJS.h  DiceJob.cpp  (+99 more)
Dice/sqlite3/: sqlite3.lib
Files/: logDocx.py  人物卡空白模板.xlsx  喵卡coc7模板.xlsx  喵苏鲁基础规则.doc
Lua/: loslib.c
OneBot/: OneBotAPI.cpp  OneBotAPI.h  WSClient.hpp  WSLinker.hpp  WSServer.hpp  main.cpp
QQAPI/: DDAPI.cpp  DDAPI.h  QQEvent.cpp  QQEvent.h
docs/: About.rst  Apply.rst  CNAME  DiceList.rst  DiceUsage.rst  License.rst  Makefile  Setup.rst  conf.py  index.rst  make.bat
json生成工具/: GUI.py  GUI2.py  cpp分析.py  sql.py  文件搜索.py
prebuilt/arm64-android/include/aws/auth/: credentials.h  signable.h  signing_config.h
prebuilt/arm64-android/include/aws/crt/: Api.h  Exports.h  Optional.h  StlAllocator.h  StringView.h  Types.h  UUID.h
prebuilt/arm64-android/include/aws/crt/auth/: Signing.h  Sigv4Signing.h
prebuilt/arm64-android/include/aws/crt/crypto/: HMAC.h
prebuilt/arm64-android/include/aws/crt/http/: HttpConnection.h  HttpConnectionManager.h  HttpProxyStrategy.h
prebuilt/arm64-android/include/aws/crt/io/: Bootstrap.h  ChannelHandler.h  EventLoopGroup.h  SocketOptions.h  Uri.h
prebuilt/arm64-android/include/aws/http/: connection_manager.h  http.h  request_response.h  statistics.h
prebuilt/arm64-android/include/aws/io/: stream.h
prebuilt/arm64-android/include/aws/mqtt/: client.h  mqtt.h
prebuilt/arm64-android/include/aws/s3/: s3.h
prebuilt/arm64-v8a/include/aws/auth/: auth.h
prebuilt/arm64-v8a/include/aws/common/: byte_buf.h
prebuilt/arm64-v8a/include/aws/crt/: Config.h  ImdsClient.h  StringUtils.h
prebuilt/arm64-v8a/include/aws/crt/auth/: Credentials.h
prebuilt/arm64-v8a/include/aws/crt/crypto/: Hash.h
prebuilt/arm64-v8a/include/aws/crt/http/: HttpRequestResponse.h
prebuilt/arm64-v8a/include/aws/crt/io/: HostResolver.h  Stream.h  TlsOptions.h
prebuilt/arm64-v8a/include/aws/crt/mqtt/: MqttClient.h
prebuilt/arm64-v8a/include/aws/http/: connection.h  proxy.h  websocket.h
prebuilt/arm64-v8a/include/aws/iot/: MqttClient.h
prebuilt/arm64-v8a/include/aws/s3/: s3_client.h
prebuilt/arm64-v8a/include/aws/testing/: aws_test_harness.h
quickjspp/: jscompress.c  quickjs-libc.c  quickjs-version.h  quickjs.h
quickjspp/storage/dybase/src/: btree.cpp  database.cpp  dybase.cpp  file.cpp  pagepool.cpp
quickjspp/win/: unistd.h
res/: CQP.lib.e  SDK_Debug.lib
src/CQSDK/: CQAPI.h  CQEVE.h  CQEVEBasic.h  CQEVEMsg.h  CQEVE_ALL.h  CQEVE_FriendAdd.h  CQEVE_GroupMsg.h  CQEVE_PrivateMsg.h  CQMsgCode.h  CQTools.h  bufstream.h  cqdefine.h
src/CQSDKCPP/: CQAPI.cpp  CQEVE.cpp  CQTools.cpp  CQmsgcode.cpp  Unpack.cpp  debug.cpp
src/ini/: INItool.cpp  INItool.h
src/sqlite/: sqlite3.lib  sqlitetool.cpp  sqlitetool.h
src/winSpeak/: yuyin.cpp
triplets/: arm-android-static.cmake  arm-android.cmake  arm64-android-static.cmake  x64-android-static.cmake  x64-android.cmake  x64-linux-static.cmake  x86-android-static.cmake  x86-android.cmake  x86-linux.cmake
vs/: SDK.sln  SDK.vcxproj  SDK.vcxproj.filters  修改输出地址.props  复制文件.props
vs/Dice/: APPINFO.h  Dice.cpp  Dice.vcxproj  RD.cpp  RD.h  RDConstant.h
yaml/: binary.cpp  convert.cpp  depthguard.cpp  directives.cpp  emit.cpp  emitfromevents.cpp  emitter.cpp  emitterstate.cpp  emitterutils.cpp  exceptions.cpp  exp.cpp  memory.cpp  node.cpp  node_data.cpp  nodebuilder.cpp  nodeevents.cpp  null.cpp  ostream_wrapper.cpp  parse.cpp  parser.cpp  regex_yaml.cpp  scanner.cpp  scanscalar.cpp  scantag.cpp  scantoken.cpp  simplekey.cpp  singledocparser.cpp  stream.cpp  tag.cpp
yaml/contrib/: graphbuilder.cpp  graphbuilderadapter.cpp
yaml/yaml-cpp/: dll.h
